🔧 CORREÇÃO URGENTE: Removidos duplicados, corrigidos imports e bugs críticos
- Corrigido app.py: imports reorganizados, prometheus opcional, app definido antes das rotas
- Removidos arquivos duplicados: chart_engine.py, database.py, etl_engine.py, gpt_engine.py (raiz)
- Corrigidos imports relativos em charts/chart_engine.py e etl/etl_engine.py
- Separados imports múltiplos em linhas individuais
- Removidos imports não utilizados
- Atualizado requirements.txt com todas as dependências
- Atualizado .env.example com variáveis corretas
- Corrigido template base.html (removido DOCTYPE duplicado)
- Atualizada marca para ANALYSTIC.A PRO ULTRA SECURE
- Adicionado __init__.py no pacote principal

--- a/analytica/.env.example
+++ b/analytica/.env.example
@@ -1,7 +1,19 @@
-# Exemplo de variáveis de ambiente para o ANALYTIC.A PRO
-SECRET_KEY=super-secret-key
-OPENAI_API_KEY=sua-chave-openai
+# ============================================
+# ANALYSTIC.A PRO ULTRA SECURE - Environment Variables
+# ============================================
+
+# Security
+SECRET_KEY=your-super-secret-key-here-change-in-production
+
+# OpenAI API
+OPENAI_API_KEY=your-openai-api-key
+
+# Database PostgreSQL
 DB_HOST=localhost
-DB_NAME=analystica
-DB_USER=analystica
-DB_PASS=analysticasecret
+DB_NAME=analystic_a
+DB_USER=analystic_a
+DB_PASS=analystic_a_secret
+
+# Redis (opcional)
+REDIS_HOST=localhost
+REDIS_PORT=6379
