--- a/analytica/requirements.txt
+++ b/analytica/requirements.txt
@@ -1,8 +1,34 @@
-fastapi
-uvicorn
-python-jose
-psycopg2-binary
-pandas
-openai
-plotly
-jinja2
+# ANALYSTIC.A PRO ULTRA SECURE - Dependencies
+# ============================================
+
+# FastAPI Framework
+fastapi>=0.104.0
+uvicorn[standard]>=0.24.0
+python-multipart>=0.0.6
+
+# Authentication
+python-jose[cryptography]>=3.3.0
+cryptography>=41.0.0
+
+# Database
+psycopg2-binary>=2.9.9
+redis>=5.0.0
+
+# Data Processing
+pandas>=2.1.0
+openpyxl>=3.1.0
+xlrd>=2.0.0
+
+# AI/GPT Integration
+openai>=1.0.0
+requests>=2.31.0
+
+# Visualization
+plotly>=5.18.0
+kaleido>=0.2.1
+
+# Templates
+jinja2>=3.1.0
+
+# Monitoring (Optional)
+prometheus_client>=0.19.0
