--- a/analytica/requirements.txt
+++ b/analytica/requirements.txt
@@ -22,6 +22,7 @@ xlrd>=2.0.0
 # AI/GPT Integration
 openai>=1.0.0
 requests>=2.31.0
+httpx>=0.25.0
 
 # Visualization
 plotly>=5.18.0
@@ -32,3 +33,6 @@ jinja2>=3.1.0
 
 # Monitoring (Optional)
 prometheus_client>=0.19.0
+
+# Utils
+python-dotenv>=1.0.0
