🔒 SEGURANÇA: Protege API Keys com variáveis de ambiente
- ✅ Adicionado load_dotenv() para carregar .env de forma segura
- 📝 Atualizado .env.example com instruções
- 🔐 Gemini API Key agora carregada via ambiente
- ⚠️  .env nunca mais será commitado (protegido pelo .gitignore)

--- a/analytica/.env.example
+++ b/analytica/.env.example
@@ -1,11 +1,15 @@
 # ============================================
 # ANALYSTIC.A PRO ULTRA SECURE - Environment Variables
+# ⚠️  COPIE PARA .env E PREENCHA COM SUAS CHAVES REAIS
 # ============================================
 
 # Security
 SECRET_KEY=your-super-secret-key-here-change-in-production
 
-# OpenAI API
+# 🤖 AI - Google Gemini (GRATUITO! - https://aistudio.google.com/apikey)
+GEMINI_API_KEY=your-gemini-api-key-here
+
+# OpenAI API (opcional)
 OPENAI_API_KEY=your-openai-api-key
 
 # Database PostgreSQL
