Limpeza premium: Python só para dados/AI, TypeScript intacto, configs organizadas, README e .env atualizados, sem duplicidade. Projeto pronto para produção!

--- a/analytica/.env.example
+++ b/analytica/.env.example
@@ -1,6 +1,9 @@
+
 # ============================================
 # ANALYSTIC.A PRO ULTRA SECURE - Environment Variables
-# ⚠️  COPIE PARA .env E PREENCHA COM SUAS CHAVES REAIS
+# ⚠️  ESTE É O ÚNICO ARQUIVO OFICIAL DE EXEMPLO DE VARIÁVEIS DE AMBIENTE
+# Copie para .env e preencha com suas chaves reais.
+# Não utilize arquivos de exemplo fora da pasta /analytica/.
 # ============================================
 
 # Security
